--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <h1>Quer ir pra bm comigo?</h1>
     <div class="button-container">
-        <button class="button yes" onclick="alert('Mas eu tô todo labirintado 😵')">Sim</button>
+        <button class="button yes" onclick="alert('Se negasse eu iria chamar a outra')">Sim</button>
         <button class="button no" onmouseover="moveButton()">Não</button>
     </div>
 
